# interactive_yolo

./: .gitignore  .gitmodules  colcon_defaults.yaml  generate_venv.sh  source_all.bash  source_ros2.bash  start_pulse_audio.sh
src/audio/: README.md  package.xml  setup.cfg  setup.py
src/audio/interactive_yolo_audio/: stt_node.py  (+2 more)
src/controled_experiment/: README.md  package.xml  setup.cfg  setup.py
src/database/: README.md  package.xml  setup.cfg  setup.py
src/display/: README.md  package.xml  setup.cfg  setup.py
src/image/: README.md  package.xml  setup.cfg  setup.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: UIAnnotation.action
src/interfaces/msg/: Annotation.msg  BoolTensor.msg  DatabaseAnnotationInfo.msg  DatabaseCategoryInfo.msg  DatabaseImageInfo.msg  DatabaseQuestionInfo.msg  DatabaseSolvedQuestionInfo.msg  DatabaseUpdateNotifaction.msg  Prediction.msg  PredictionResult.msg  Segment.msg
src/interfaces/srv/: PonctualInference.srv
src/interfaces/srv/database/: GetAllDatabaseCategories.srv  GetDatabaseAnnotation.srv  GetDatabaseCategory.srv  GetDatabaseCategoryByName.srv  GetDatabaseImage.srv  GetDatabaseQuestion.srv  OpenImage.srv  RegisterDatabaseAnnotation.srv  RegisterDatabaseCategory.srv  RegisterDatabaseImage.srv  RegisterDatabaseQuestion.srv  RemoveDatabaseQuestion.srv  SetDatabaseAnnotationEmbedding.srv  SetDatabaseAnnotationMask.srv  SetDatabaseCategoryEmbeddings.srv  SetDatabaseCategoryZeroshotEmbedding.srv  SolveDatabaseQuestion.srv
src/model/: .gitignore  README.md  package.xml  setup.cfg  setup.py
src/question_loop/: README.md  package.xml  setup.cfg  setup.py
(+57 files in other folders)
